Fixed scrollbar.

--- a/src/features/Cart/components/CartModal/CartModal.scss
+++ b/src/features/Cart/components/CartModal/CartModal.scss
@@ -1,16 +1,18 @@
 .cart-modal {
-  z-index          : 2;
-  bottom           : 0;
-  left             : 50%;
-  overflow         : scroll;
-  display          : grid;
-  align-content    : flex-start;
-  gap              : 2rem;
-  width            : 100%;
-  height           : 100%;
-  padding          : 2.5rem 1.5rem 1.5rem 1.5rem;
-  border-radius    : 0.75rem 0.75rem 0 0;
-  background-color : $clr-white;
+  z-index            : 2;
+  bottom             : 0;
+  left               : 50%;
+  overflow           : scroll;
+  display            : grid;
+  align-content      : flex-start;
+  gap                : 2rem;
+  width              : 100%;
+  height             : 100%;
+  padding            : 2.5rem 1.5rem 1.5rem 1.5rem;
+  border-radius      : 0.75rem 0.75rem 0 0;
+  background-color   : $clr-white;
+  scrollbar-width    : none;
+  -ms-overflow-style : none;
 
   @include breakpoint(medium) {
     overflow      : unset;
